--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/babel-types": "^7.0.11",
+    "@types/babel__core": "^7.20.1",
+    "@types/babel__standalone": "^7.1.4",
     "@types/node": "^20.4.5",
     "@vitejs/plugin-vue": "^4.2.3",
     "typescript": "^5.1.6",
@@ -19,7 +22,7 @@
   "dependencies": {
     "@babel/standalone": "^7.22.9",
     "vue": "^3.3.4",
-    "vue2": "npm:vue@2.7.14",
-    "vue-template-compiler": "^2.7.14"
+    "vue-template-compiler": "^2.7.14",
+    "vue2": "npm:vue@2.7.14"
   }
 }
