--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cs-vue",
   "version": "1.0.0",
   "description": "",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "dev": "vite"
@@ -10,9 +11,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/babel-types": "^7.0.11",
-    "@types/babel__core": "^7.20.1",
-    "@types/babel__standalone": "^7.1.4",
     "@types/node": "^20.4.5",
     "@vitejs/plugin-vue": "^4.2.3",
     "typescript": "^5.1.6",
@@ -20,9 +18,8 @@
     "vue-tsc": "^1.8.8"
   },
   "dependencies": {
-    "@babel/standalone": "^7.22.9",
+    "compiler-vue": "workspace:^",
     "vue": "^3.3.4",
-    "vue-template-compiler": "^2.7.14",
     "vue2": "npm:vue@2.7.14"
   }
 }
