--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "typescript": "^5.1.6",
     "vite": "^4.4.7",
+    "vite-plugin-dts": "^3.4.0",
     "vue-tsc": "^1.8.8"
   },
   "dependencies": {
